Possible divider overflow fix for mobile browsers

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+
 }
 
 
@@ -72,12 +72,10 @@ header h1 {
 
 /* -- Divider -- */
 .divider {
-    position: absolute;
-    width: 120vw;
+    width: 100vw;
+    overflow-x: hidden;
     margin-left: -10vw;
     margin-top: -10px;
-    display: flex;
-    justify-content: center;
 }
 .upperdiv, .lowerdiv {
     background-color: #F6F7F9;
@@ -86,12 +84,14 @@ header h1 {
     margin-top: -50px;
     margin-left: -15px;
     z-index: -1;
+    position: absolute;
 }
 .upperdiv {
     transform: rotate(7deg);
 }
 .lowerdiv {
     transform: rotate(353deg);
+    right: -17%;
 }
 
 
